[package]
name = "app"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2.1.3"  # Последняя стабильная версия napi
napi-derive = "2.1.3"
serde = { version = "1.0.208", features = ["derive"]}
serde_json = "1.0.125"
validator = { version = "0.18.1", features = ["derive"]}
once_cell = "1.19.0"
regex = "1.10.6"

[build-dependencies]
napi-build = "2.1.3"